ags (2.1.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented reset soundcard property of AgsWindow
	* fixed AgsXorgApplicationContext ref counting
	* fixed AgsAudioApplicationContext ref counting
	* fixed add/remove pulseaudio soundcard by configuration
	* fixed add/remove JACK soundcard by configuration

ags (2.1.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved AgsFunctionalDrumTest and AgsFunctionalFFPlayerTest to assert if directory exists
	* completed ags_functional_osc_server_test.c
	* fixed missing include in ags_play_wave_channel_run.c
	* fixed memory leaks of AgsOscFrontController
	* fixed memory leaks of AgsOscActionController
	* fixed memory leaks of AgsOscConfigController
	* fixed memory leaks of AgsOscMeterController
	* fixed memory leaks of AgsOscNodeController
	* fixed memory leaks of AgsOscRenewController
	* fixed memory leaks of AgsOscStatusController

ags (2.1.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_osc_util_decode() to return correct size

ags (2.1.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsOscServerPreferences
	* implemented parse OSC server config in ags_xorg_application_context_setup()
	* implemented data cache of OSC connection and client
	* implemented missing persistence of AgsAudio:audio-name property
	* improved read bytes of OSC connection and client

ags (2.1.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added ags_osc_client_test.c
	* added ags_osc_connection_test.c
	* added ags_functional_osc_server_test.c

ags (2.1.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing include of signal.h in ags_audio_application_context.c
	* fixed ags_thread_add_start_queue() and ags_thread_add_start_queue_all() to use correct mutex
	* fixed ags_functional_audio_test.c removed wrong code starting threads twice

ags (2.1.8)
